# rust_snappy_src

./: CHANGELOG.md  Cargo.toml  README.md  bindings.rs  build.rs
.github/workflows/: ci.yml
src/: lib.rs
